--- a/app/src/main/res/drawable/bg_select.xml
+++ b/app/src/main/res/drawable/bg_select.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="24dp" />  <solid android:color="#FF9800" />  <stroke
-    android:width="2dp"
-    android:color="#FF7043" />  </shape>
+    <corners android:radius="24dp" />  <solid android:color="#FF9800" />    </shape>
