--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -53,7 +54,7 @@
                     android:id="@+id/button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="48dp"
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/primary"
                     android:fontFamily="@font/roboto"
@@ -122,7 +123,26 @@
                     android:layout_marginTop="16dp"
                     android:backgroundTint="@color/secondary"
                     android:text="Login"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/textViewHaveAccount3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/noLogin"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/textViewLoginLink3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/signup1"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
             </LinearLayout>
 
@@ -131,7 +151,7 @@
                 android:layout_width="0dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="72dp"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/btn"
                 android:drawableRight="@drawable/googleicon"
