--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,4 +1,5 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -156,6 +157,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/favArrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/arrow_forward_ios_20px" />
@@ -234,6 +236,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/btn1"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/arrow_forward_ios_20px" />
@@ -273,10 +276,11 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/logout1"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            app:tint="@color/red"
-            android:src="@drawable/logout_20px" />
+            android:src="@drawable/logout_20px"
+            app:tint="@color/red" />
     </LinearLayout>
 
     <View
