--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,10 +10,11 @@
 
     <View
         android:id="@+id/top_bar"
-        android:layout_width="450dp"
-        android:layout_height="164dp"
+        android:layout_width="455dp"
+        android:layout_height="121dp"
         android:background="#FF9800"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,19 +22,19 @@
         android:id="@+id/profile_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="12dp"
         android:src="@drawable/account_avatar_profile_user_svgrepo_com"
         app:layout_constraintBottom_toBottomOf="@+id/top_bar"
         app:layout_constraintStart_toStartOf="@+id/top_bar"
         app:layout_constraintTop_toTopOf="@+id/top_bar"
-        app:layout_constraintVertical_bias="0.809" />
+        app:layout_constraintVertical_bias="0.285" />
 
     <TextView
         android:id="@+id/greeting_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto_medium"
         android:text="@string/hello_dinuka"
         android:textColor="#FFFFFF"
@@ -58,12 +60,12 @@
         android:id="@+id/notification_icon"
         android:layout_width="31dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="44dp"
         android:src="@drawable/notifications_20px"
         app:layout_constraintBottom_toBottomOf="@+id/top_bar"
         app:layout_constraintEnd_toEndOf="@+id/top_bar"
         app:layout_constraintTop_toTopOf="@+id/top_bar"
-        app:layout_constraintVertical_bias="0.552" />
+        app:layout_constraintVertical_bias="0.183" />
 
     <EditText
         android:id="@+id/search_bar"
@@ -222,6 +224,7 @@
         app:layout_constraintTop_toBottomOf="@+id/popular_recipes_title">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/recipecard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -307,6 +310,7 @@
         android:id="@+id/recommended_scroll_view"
         android:layout_width="423dp"
         android:layout_height="161dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -318,6 +322,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
@@ -326,6 +331,7 @@
                 android:layout_marginEnd="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="2dp">
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
